--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.3.1",
+    "date-fns": "^2.28.0",
     "next": "^12.0.10",
     "next-images": "^1.8.4",
     "react": "17.0.2",
