--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-player": "^2.9.0",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
