--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.3.1",
     "date-fns": "^2.28.0",
+    "firebase": "^9.6.7",
     "next": "^12.0.10",
     "next-images": "^1.8.4",
     "react": "17.0.2",
