--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.3.1",
+    "axios": "^0.26.0",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.7",
     "next": "^12.0.10",
