--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
