--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
