--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "swr": "^1.2.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
