--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mui/material": "^5.3.1",
     "axios": "^0.26.0",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.7",
     "next": "^12.1.0",
     "next-images": "^1.8.4",
